--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab4_DoheeKim"
         tools:targetApi="31">
+
+
         <activity
-            android:name=".MainActivity"
+            android:name=".SignInActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Lab4_DoheeKim">
@@ -23,6 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.lab4_doheekim.screen.HomeScreen" android:exported="false" />
+
+        <activity android:name=".SignUpActivity" android:exported="false" />
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
